--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -253,24 +253,24 @@
   "NotifierPlusUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "OneataTimeType": "App",
-  "OneataTimeParentVersion": "v1.1.2",
-  "OneataTimeChildVersion": "v1.1.3",
+  "OneataTimeParentVersion": "v2.0.0",
+  "OneataTimeChildVersion": "v2.0.0",
   "OneataTimeDriverVersion": "NA",
   "OneataTimeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/One%20at%20a%20Time/OaaT-Parent.groovy",
   "OneataTimeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/One%20at%20a%20Time/OaaT-Child.groovy",
   "OneataTimeDriverRawCode": "NA",
   "OneataTimeDiscussion": "https://community.hubitat.com/t/release-one-at-a-time/7063",
-  "OneataTimeUpdateNote": "V1.1.3 - 04/15/19 - Code cleanup",
+  "OneataTimeUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "SendIP2IRType": "App",
-  "SendIP2IRParentVersion": "v1.1.7",
-  "SendIP2IRChildVersion": "v1.2.0",
+  "SendIP2IRParentVersion": "v2.0.0",
+  "SendIP2IRChildVersion": "v2.0.0",
   "SendIP2IRDriverVersion": "V1.0.3",
   "SendIP2IRParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Parent.groovy",
   "SendIP2IRChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Child.groovy",
   "SendIP2IRDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Driver.groovy",
   "SendIP2IRDiscussion": "https://community.hubitat.com/t/release-send-ip2ir-control-all-of-your-ir-devices-from-your-dashboard/4667",
-  "SendIP2IRUpdateNote": "V1.2.0 - 07/14/19 - Minor code changes",
+  "SendIP2IRUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "SimpleIrrigationType": "App",
   "SimpleIrrigationParentVersion": "v1.0.0",
