--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -284,44 +284,44 @@
   "SimpleDeviceTimerUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "SimpleIrrigationType": "App",
-  "SimpleIrrigationParentVersion": "v1.0.0",
-  "SimpleIrrigationChildVersion": "v1.0.6",
+  "SimpleIrrigationParentVersion": "v2.0.0",
+  "SimpleIrrigationChildVersion": "v2.0.0",
   "SimpleIrrigationDriverVersion": "NA",
   "SimpleIrrigationParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-parent.groovy",
   "SimpleIrrigationChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-child.groovy",
   "SimpleIrrigationDriverRawCode": "NA",
   "SimpleIrrigationDiscussion": "-",
-  "SimpleIrrigationUpdateNote": "V1.0.6 - 06/09/19 - Fixed issue with multiple schedules",
+  "SimpleIrrigationUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "SnapshotType": "App",
-  "SnapshotParentVersion": "v1.0.1",
-  "SnapshotChildVersion": "v1.1.5",
+  "SnapshotParentVersion": "v2.0.0",
+  "SnapshotChildVersion": "v2.0.0",
   "SnapshotDriverVersion": "v1.0.9",
   "SnapshotParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-parent.groovy",
   "SnapshotChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-Child.groovy",
   "SnapshotDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-driver.groovy",
   "SnapshotDiscussion": "https://community.hubitat.com/t/release-snapshot/12042",
-  "SnapshotUpdateNote": "V1.1.5 - 06/11/19 - Code cleanup",
+  "SnapshotUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "WebPingerType": "App",
-  "WebPingerParentVersion": "v1.0.2",
-  "WebPingerChildVersion": "v1.0.4",
+  "WebPingerParentVersion": "v2.0.0",
+  "WebPingerChildVersion": "v2.0.0",
   "WebPingerDriverVersion": "NA",
   "WebPingerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Web%20Pinger/WP-parent.groovy",
   "WebPingerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Web%20Pinger/WP-child.groovy",
   "WebPingerDriverRawCode": "NA",
   "WebPingerDiscussion": "https://community.hubitat.com/t/release-web-pinger/8347",
-  "WebPingerUpdateNote": "V1.0.4 - 04/15/19 - Code cleanup",
+  "WebPingerUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "WelcomeHomeType": "App",
-  "WelcomeHomeParentVersion": "v2.0.2",
-  "WelcomeHomeChildVersion": "v2.1.0",
+  "WelcomeHomeParentVersion": "v2.0.3",
+  "WelcomeHomeChildVersion": "v2.1.1",
   "WelcomeHomeDriverVersion": "v1.0.2",
   "WelcomeHomeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Parent.groovy",
   "WelcomeHomeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Child.groovy",
   "WelcomeHomeDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Driver.groovy",
   "WelcomeHomeDiscussion": "https://community.hubitat.com/t/release-welcome-home/6445",
-  "WelcomeHomeUpdateNote": "V2.1.0 - 06/06/19 - Added more wording to Volume Control Options. Code cleanup.",
+  "WelcomeHomeUpdateNote": "V2.1.1 - 08/18/19 - App Watchdog 2 compatible",
   
   "WhatDidISayType": "Driver",
   "WhatDidISayDriver1Version": "v2.0.0",
