--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -85,13 +85,13 @@
 
   "AppWatchdog2Type": "App",
   "AppWatchdog2ParentVersion": "v2.0.0",
-  "AppWatchdog2ChildVersion": "v2.0.0",
+  "AppWatchdog2ChildVersion": "v2.0.1",
   "AppWatchdog2DriverVersion": "v2.0.0",
   "AppWatchdog2ParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-parent.groovy",
   "AppWatchdog2ChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-child.groovy",
   "AppWatchdog2DriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-driver.groovy",
   "AppWatchdog2Discussion": "https://community.hubitat.com/t/release-app-watchdog/9952",
-  "AppWatchdog2UpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
+  "AppWatchdog2UpdateNote": "V2.0.1 - 08/20/19 - Fixed some missing code in dName.",
 
   "AtHomeSimulatorType": "App",
   "AtHomeSimulatorParentVersion": "v2.0.0",
