--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -37,35 +37,19 @@
   "ExampleDriverVersion": "Replace Example with your App name - NO spaces",
   "ExampleParentRawCode": "NA",
   "ExampleChildRawCode": "NA",
+  "ExampleChild2RawCode": "NA",
+  "ExampleChild3RawCode": "NA",
+  "ExampleChild4RawCode": "NA",
   "ExampleDriverRawCode": "NA",
   "ExampleDiscussion": "NA",
   "ExampleUpdateNote": "NA",
   
-  "Example2Type": "Driver",
-  "Example2Driver1Version": "NA",
-  "Example2Driver2Version": "NA",
-  "Example2Driver3Version": "NA",
-  "Example2Driver4Version": "NA",
-  "Example2Driver5Version": "NA",
-  "Example2Driver6Version": "NA",
-  "Example2Driver1RawCode": "NA",
-  "Example2Driver2RawCode": "NA",
-  "Example2Driver3RawCode": "NA",
-  "Example2Driver4RawCode": "NA",
-  "Example2Driver5RawCode": "NA",
-  "Example2Driver6RawCode": "NA",
-  "ExampleDriver1Name": "NA",
-  "ExampleDriver2Name": "NA",
-  "ExampleDriver3Name": "NA",
-  "ExampleDriver4Name": "NA",
-  "ExampleDriver5Name": "NA",
-  "ExampleDriver6Name": "NA",
-  "Example2Discussion": "NA",
-  "Example2UpdateNote": "NA",
-  
   "AbacusIntenseCountingType": "App",
   "AbacusIntenseCountingParentVersion": "v2.0.0",
   "AbacusIntenseCountingChildVersion": "v2.0.0",
+  "AbacusIntenseCountingChild2Version": "NA",
+  "AbacusIntenseCountingChild3Version": "NA",
+  "AbacusIntenseCountingChild4Version": "NA",
   "AbacusIntenseCountingDriverVersion": "V1.0.2",
   "AbacusIntenseCountingParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-parent.groovy",
   "AbacusIntenseCountingChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-child.groovy",
@@ -76,6 +60,9 @@
   "AbacusTimeTravelerType": "App",
   "AbacusTimeTravelerParentVersion": "v2.0.0",
   "AbacusTimeTravelerChildVersion": "v2.0.0",
+  "AbacusTimeTravelerChild2Version": "NA",
+  "AbacusTimeTravelerChild3Version": "NA",
+  "AbacusTimeTravelerChild4Version": "NA",
   "AbacusTimeTravelerDriverVersion": "NA",
   "AbacusTimeTravelerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-parent.groovy",
   "AbacusTimeTravelerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-child.groovy",
@@ -86,6 +73,9 @@
   "AppWatchdog2Type": "App",
   "AppWatchdog2ParentVersion": "v2.0.0",
   "AppWatchdog2ChildVersion": "v2.0.1",
+  "AppWatchdog2Child2Version": "NA",
+  "AppWatchdog2Child3Version": "NA",
+  "AppWatchdog2Child4Version": "NA",
   "AppWatchdog2DriverVersion": "v2.0.0",
   "AppWatchdog2ParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-parent.groovy",
   "AppWatchdog2ChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-child.groovy",
@@ -96,6 +86,9 @@
   "AtHomeSimulatorType": "App",
   "AtHomeSimulatorParentVersion": "v2.0.0",
   "AtHomeSimulatorChildVersion": "v2.0.0",
+  "AtHomeSimulatorChild2Version": "NA",
+  "AtHomeSimulatorChild3Version": "NA",
+  "AtHomeSimulatorChild4Version": "NA",
   "AtHomeSimulatorDriverVersion": "NA",
   "AtHomeSimulatorParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/At%20Home%20Simulator/AHS-parent.groovy",
   "AtHomeSimulatorChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/At%20Home%20Simulator/AHS-child.groovy",
@@ -106,6 +99,9 @@
   "BIControlType": "App",
   "BIControlParentVersion": "v2.0.0",
   "BIControlChildVersion": "v2.0.0",
+  "BIControlChild2Version": "NA",
+  "BIControlChild3Version": "NA",
+  "BIControlChild4Version": "NA",
   "BIControlDriverVersion": "NA",
   "BIControlParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Parent.groovy",
   "BIControlChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Child.groovy",
@@ -116,6 +112,9 @@
   "CATTDirectorType": "App",
   "CATTDirectorParentVersion": "v2.0.0",
   "CATTDirectorChildVersion": "v2.0.0",
+  "CATTDirectorChild2Version": "NA",
+  "CATTDirectorChild3Version": "NA",
+  "CATTDirectorChild4Version": "NA",
   "CATTDirectorDriverVersion": "NA",
   "CATTDirectorParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/CATT%20Director/CATTD-parent.groovy",
   "CATTDirectorChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/CATT%20Director/CATTD-child.groovy",
@@ -126,6 +125,9 @@
   "ChromecastHelperType": "App",
   "ChromecastHelperParentVersion": "v2.0.0",
   "ChromecastHelperChildVersion": "NA",
+  "ChromecastHelperChild2Version": "NA",
+  "ChromecastHelperChild3Version": "NA",
+  "ChromecastHelperChild4Version": "NA",
   "ChromecastHelperDriverVersion": "NA",
   "ChromecastHelperParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Chromecast%20Helper/CH.groovy",
   "ChromecastHelperChildRawCode": "NA",
@@ -136,6 +138,9 @@
   "DeparturesType": "App",
   "DeparturesParentVersion": "v2.0.0",
   "DeparturesChildVersion": "v2.0.0",
+  "DeparturesChild2Version": "NA",
+  "DeparturesChild3Version": "NA",
+  "DeparturesChild4Version": "NA",
   "DeparturesDriverVersion": "NA",
   "DeparturesParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/D-parent.groovy",
   "DeparturesChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/D-child.groovy",
@@ -146,6 +151,9 @@
   "DeviceSequencerType": "App",
   "DeviceSequencerParentVersion": "v2.0.0",
   "DeviceSequencerChildVersion": "v2.0.0",
+  "DeviceSequencerChild2Version": "NA",
+  "DeviceSequencerChild3Version": "NA",
+  "DeviceSequencerChild4Version": "NA",
   "DeviceSequencerDriverVersion": "NA",
   "DeviceSequencerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Sequencer/DS-parent.groovy",
   "DeviceSequencerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Sequencer/DS-child.groovy",
@@ -156,6 +164,9 @@
   "DeviceWatchdogType": "App",
   "DeviceWatchdogParentVersion": "v2.0.0",
   "DeviceWatchdogChildVersion": "v2.0.0",
+  "DeviceWatchdogChild2Version": "NA",
+  "DeviceWatchdogChild3Version": "NA",
+  "DeviceWatchdogChild4Version": "NA",
   "DeviceWatchdogDriverVersion": "V1.0.4",
   "DeviceWatchdogParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-parent.groovy",
   "DeviceWatchdogChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-child.groovy",
@@ -166,6 +177,9 @@
   "FollowMeType": "App",
   "FollowMeParentVersion": "v2.0.0",
   "FollowMeChildVersion": "v2.0.2",
+  "FollowMeChild2Version": "NA",
+  "FollowMeChild3Version": "NA",
+  "FollowMeChild4Version": "NA",
   "FollowMeDriverVersion": "NA",
   "FollowMeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-parent.groovy",
   "FollowMeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-child.groovy",
@@ -176,6 +190,9 @@
   "FullyKioskDirectorType": "App",
   "FullyKioskDirectorParentVersion": "v2.0.0",
   "FullyKioskDirectorChildVersion": "v2.0.0",
+  "FullyKioskDirectorChild2Version": "NA",
+  "FullyKioskDirectorChild3Version": "NA",
+  "FullyKioskDirectorChild4Version": "NA",
   "FullyKioskDirectorDriverVersion": "NA",
   "FullyKioskDirectorParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Fully%20Kiosk%20Director/FKC-parent.groovy",
   "FullyKioskDirectorChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Fully%20Kiosk%20Director/FKC-child.groovy",
@@ -186,6 +203,9 @@
   "GentleWakeUpType": "App",
   "GentleWakeUpParentVersion": "v2.0.0",
   "GentleWakeUpChildVersion": "v2.0.0",
+  "GentleWakeUpChild2Version": "NA",
+  "GentleWakeUpChild3Version": "NA",
+  "GentleWakeUpChild4Version": "NA",
   "GentleWakeUpDriverVersion": "v1.0.0",
   "GentleWakeUpParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Gentle%20Wake%20Up/GWU-parent.groovy",
   "GentleWakeUpChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Gentle%20Wake%20Up/GWU-child.groovy",
@@ -196,6 +216,9 @@
   "Life360TrackerType": "App",
   "Life360TrackerParentVersion": "v2.0.0",
   "Life360TrackerChildVersion": "v2.0.0",
+  "Life360TrackerChild2Version": "NA",
+  "Life360TrackerChild3Version": "NA",
+  "Life360TrackerChild4Version": "NA",
   "Life360TrackerDriverVersion": "NA",
   "Life360TrackerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Life360%20Tracker/LT-parent.groovy",
   "Life360TrackerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Life360%20Tracker/LT-child.groovy",
@@ -206,6 +229,9 @@
   "Life360withStatesType": "App",
   "Life360withStatesParentVersion": "v2.0.0",
   "Life360withStatesChildVersion": "NA",
+  "Life360withStatesChild2Version": "NA",
+  "Life360withStatesChild3Version": "NA",
+  "Life360withStatesChild4Version": "NA",
   "Life360withStatesDriverVersion": "v1.1.3",
   "Life360withStatesParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Life360/L-app.groovy",
   "Life360withStatesChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Life360/L-driver.groovy",
@@ -216,6 +242,9 @@
   "LightingEffectsType": "App",
   "LightingEffectsParentVersion": "v2.0.0",
   "LightingEffectsChildVersion": "v2.0.0",
+  "LightingEffectsChild2Version": "NA",
+  "LightingEffectsChild3Version": "NA",
+  "LightingEffectsChild4Version": "NA",
   "LightingEffectsDriverVersion": "NA",
   "LightingEffectsParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Lighting%20Effects/LE%20Parent.groovy",
   "LightingEffectsChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Lighting%20Effects/LE%20Child.groovy",
@@ -226,6 +255,9 @@
   "MagicCubeType": "App",
   "MagicCubeParentVersion": "v2.0.0",
   "MagicCubeChildVersion": "v2.0.1",
+  "MagicCubeChild2Version": "NA",
+  "MagicCubeChild3Version": "NA",
+  "MagicCubeChild4Version": "NA",
   "MagicCubeDriverVersion": "NA",
   "MagicCubeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Magic%20Cube/MC-parent.groovy",
   "MagicCubeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Magic%20Cube/MC-child.groovy",
@@ -236,6 +268,9 @@
   "MotionControlledSceneLightingType": "App",
   "MotionControlledSceneLightingParentVersion": "v2.0.0",
   "MotionControlledSceneLightingChildVersion": "v2.0.0",
+  "MotionControlledSceneLightingChild2Version": "NA",
+  "MotionControlledSceneLightingChild3Version": "NA",
+  "MotionControlledSceneLightingChild4Version": "NA",
   "MotionControlledSceneLightingDriverVersion": "NA",
   "MotionControlledSceneLightingParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Motion%20Controlled%20Scene%20Lighting/MCSL-Parent.groovy",
   "MotionControlledSceneLightingChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Motion%20Controlled%20Scene%20Lighting/MCSL-Child.groovy",
@@ -246,6 +281,9 @@
   "NotifierPlusType": "App",
   "NotifierPlusParentVersion": "v2.0.0",
   "NotifierPlusChildVersion": "v2.0.0",
+  "NotifierPlusChild2Version": "NA",
+  "NotifierPlusChild3Version": "NA",
+  "NotifierPlusChild4Version": "NA",
   "NotifierPlusDriverVersion": "NA",
   "NotifierPlusParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-parent.groovy",
   "NotifierPlusChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-child.groovy",
@@ -256,6 +294,9 @@
   "OneataTimeType": "App",
   "OneataTimeParentVersion": "v2.0.0",
   "OneataTimeChildVersion": "v2.0.0",
+  "OneataTimeChild2Version": "NA",
+  "OneataTimeChild3Version": "NA",
+  "OneataTimeChild4Version": "NA",
   "OneataTimeDriverVersion": "NA",
   "OneataTimeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/One%20at%20a%20Time/OaaT-Parent.groovy",
   "OneataTimeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/One%20at%20a%20Time/OaaT-Child.groovy",
@@ -266,6 +307,9 @@
   "SendIP2IRType": "App",
   "SendIP2IRParentVersion": "v2.0.0",
   "SendIP2IRChildVersion": "v2.0.0",
+  "SendIP2IRChild2Version": "NA",
+  "SendIP2IRChild3Version": "NA",
+  "SendIP2IRChild4Version": "NA",
   "SendIP2IRDriverVersion": "V1.0.3",
   "SendIP2IRParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Parent.groovy",
   "SendIP2IRChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Child.groovy",
@@ -276,6 +320,9 @@
   "SimpleDeviceTimerType": "App",
   "SimpleDeviceTimerParentVersion": "v2.0.0",
   "SimpleDeviceTimerChildVersion": "v2.0.0",
+  "SimpleDeviceTimerChild2Version": "NA",
+  "SimpleDeviceTimerChild3Version": "NA",
+  "SimpleDeviceTimerChild4Version": "NA",
   "SimpleDeviceTimerDriverVersion": "NA",
   "SimpleDeviceTimerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Device%20Timer/SDT-parent.groovy",
   "SimpleDeviceTimerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Device%20Timer/SDT-child.groovy",
@@ -286,6 +333,9 @@
   "SimpleIrrigationType": "App",
   "SimpleIrrigationParentVersion": "v2.0.0",
   "SimpleIrrigationChildVersion": "v2.0.0",
+  "SimpleIrrigationChild2Version": "NA",
+  "SimpleIrrigationChild3Version": "NA",
+  "SimpleIrrigationChild4Version": "NA",
   "SimpleIrrigationDriverVersion": "NA",
   "SimpleIrrigationParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-parent.groovy",
   "SimpleIrrigationChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-child.groovy",
@@ -296,6 +346,9 @@
   "SnapshotType": "App",
   "SnapshotParentVersion": "v2.0.0",
   "SnapshotChildVersion": "v2.0.0",
+  "SnapshotChild2Version": "NA",
+  "SnapshotChild3Version": "NA",
+  "SnapshotChild4Version": "NA",
   "SnapshotDriverVersion": "v1.0.9",
   "SnapshotParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-parent.groovy",
   "SnapshotChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-Child.groovy",
@@ -306,6 +359,9 @@
   "WebPingerType": "App",
   "WebPingerParentVersion": "v2.0.0",
   "WebPingerChildVersion": "v2.0.0",
+  "WebPingerChild2Version": "NA",
+  "WebPingerChild3Version": "NA",
+  "WebPingerChild4Version": "NA",
   "WebPingerDriverVersion": "NA",
   "WebPingerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Web%20Pinger/WP-parent.groovy",
   "WebPingerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Web%20Pinger/WP-child.groovy",
@@ -316,6 +372,9 @@
   "WelcomeHomeType": "App",
   "WelcomeHomeParentVersion": "v2.0.3",
   "WelcomeHomeChildVersion": "v2.1.1",
+  "WelcomeHomeChild2Version": "NA",
+  "WelcomeHomeChild3Version": "NA",
+  "WelcomeHomeChild4Version": "NA",
   "WelcomeHomeDriverVersion": "v1.0.2",
   "WelcomeHomeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Parent.groovy",
   "WelcomeHomeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Child.groovy",
