--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -138,7 +138,7 @@
   "DeparturesType": "App",
   "DeparturesParentVersion": "v2.0.0",
   "DeparturesChildVersion": "v2.0.0",
-  "DeparturesChildName": "Arrivals Child"
+  "DeparturesChildName": "Arrivals Child",
   "DeparturesChild2Version": "v2.0.0",
   "DeparturesChild2Name": "Departures Child",
   "DeparturesChild3Version": "NA",
