--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -148,6 +148,9 @@
   "DeparturesDriverVersion": "NA",
   "DeparturesParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/D-parent.groovy",
   "DeparturesChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/D-child.groovy",
+  "DeparturesChild2RawCode": "NA",
+  "DeparturesChild3RawCode": "NA",
+  "DeparturesChild4RawCode": "NA",
   "DeparturesDriverRawCode": "NA",
   "DeparturesDiscussion": "https://community.hubitat.com/t/release-departures/12039",
   "DeparturesUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
