--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -138,9 +138,9 @@
   "DeparturesType": "App",
   "DeparturesParentVersion": "v2.0.0",
   "DeparturesChildVersion": "v2.0.0",
-  "DeparturesChildName": "Arrivals Child",
+  "DeparturesChildName": "Departures Child",
   "DeparturesChild2Version": "v2.0.0",
-  "DeparturesChild2Name": "Departures Child",
+  "DeparturesChild2Name": "Arrivals Child",
   "DeparturesChild3Version": "NA",
   "DeparturesChild3Name": "NA",
   "DeparturesChild4Version": "NA",
@@ -148,7 +148,7 @@
   "DeparturesDriverVersion": "NA",
   "DeparturesParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/D-parent.groovy",
   "DeparturesChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/D-child.groovy",
-  "DeparturesChild2RawCode": "NA",
+  "DeparturesChild2RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/A-child.groovy",
   "DeparturesChild3RawCode": "NA",
   "DeparturesChild4RawCode": "NA",
   "DeparturesDriverRawCode": "NA",
