--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -30,26 +30,16 @@
   "App26": "Welcome Home",
   "App27": "What Did I Say",
   
-  
-  "ExampleType": "App",
-  "ExampleParentVersion": "Do not remove this section.",
-  "ExampleChildVersion": "Use it to copy and paste in another app.",
-  "ExampleDriverVersion": "Replace Example with your App name - NO spaces",
-  "ExampleParentRawCode": "NA",
-  "ExampleChildRawCode": "NA",
-  "ExampleChild2RawCode": "NA",
-  "ExampleChild3RawCode": "NA",
-  "ExampleChild4RawCode": "NA",
-  "ExampleDriverRawCode": "NA",
-  "ExampleDiscussion": "NA",
-  "ExampleUpdateNote": "NA",
-  
   "AbacusIntenseCountingType": "App",
   "AbacusIntenseCountingParentVersion": "v2.0.0",
   "AbacusIntenseCountingChildVersion": "v2.0.0",
+  "AbacusIntenseCountingChildName": "NA",
   "AbacusIntenseCountingChild2Version": "NA",
+  "AbacusIntenseCountingChild2Name": "NA",
   "AbacusIntenseCountingChild3Version": "NA",
+  "AbacusIntenseCountingChild3Name": "NA",
   "AbacusIntenseCountingChild4Version": "NA",
+  "AbacusIntenseCountingChild4Name": "NA",
   "AbacusIntenseCountingDriverVersion": "V1.0.2",
   "AbacusIntenseCountingParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-parent.groovy",
   "AbacusIntenseCountingChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-child.groovy",
@@ -60,9 +50,13 @@
   "AbacusTimeTravelerType": "App",
   "AbacusTimeTravelerParentVersion": "v2.0.0",
   "AbacusTimeTravelerChildVersion": "v2.0.0",
+  "AbacusTimeTravelerChildName": "NA",
   "AbacusTimeTravelerChild2Version": "NA",
+  "AbacusTimeTravelerChild2Name": "NA",
   "AbacusTimeTravelerChild3Version": "NA",
+  "AbacusTimeTravelerChild3Name": "NA",
   "AbacusTimeTravelerChild4Version": "NA",
+  "AbacusTimeTravelerChild4Name": "NA",
   "AbacusTimeTravelerDriverVersion": "NA",
   "AbacusTimeTravelerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-parent.groovy",
   "AbacusTimeTravelerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-child.groovy",
@@ -73,9 +67,13 @@
   "AppWatchdog2Type": "App",
   "AppWatchdog2ParentVersion": "v2.0.0",
   "AppWatchdog2ChildVersion": "v2.0.1",
+  "AppWatchdog2ChildName": "NA",
   "AppWatchdog2Child2Version": "NA",
+  "AppWatchdog2Child2Name": "NA",
   "AppWatchdog2Child3Version": "NA",
+  "AppWatchdog2Child3Name": "NA",
   "AppWatchdog2Child4Version": "NA",
+  "AppWatchdog2Child4Name": "NA",
   "AppWatchdog2DriverVersion": "v2.0.0",
   "AppWatchdog2ParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-parent.groovy",
   "AppWatchdog2ChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-child.groovy",
@@ -86,9 +84,13 @@
   "AtHomeSimulatorType": "App",
   "AtHomeSimulatorParentVersion": "v2.0.0",
   "AtHomeSimulatorChildVersion": "v2.0.0",
+  "AtHomeSimulatorChildName": "NA",
   "AtHomeSimulatorChild2Version": "NA",
+  "AtHomeSimulatorChild2Name": "NA",
   "AtHomeSimulatorChild3Version": "NA",
+  "AtHomeSimulatorChild3Name": "NA",
   "AtHomeSimulatorChild4Version": "NA",
+  "AtHomeSimulatorChild4Name": "NA",
   "AtHomeSimulatorDriverVersion": "NA",
   "AtHomeSimulatorParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/At%20Home%20Simulator/AHS-parent.groovy",
   "AtHomeSimulatorChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/At%20Home%20Simulator/AHS-child.groovy",
@@ -99,9 +101,13 @@
   "BIControlType": "App",
   "BIControlParentVersion": "v2.0.0",
   "BIControlChildVersion": "v2.0.0",
+  "BIControlChildName": "NA",
   "BIControlChild2Version": "NA",
+  "BIControlChild2Name": "NA",
   "BIControlChild3Version": "NA",
+  "BIControlChild3Name": "NA",
   "BIControlChild4Version": "NA",
+  "BIControlChild4Name": "NA",
   "BIControlDriverVersion": "NA",
   "BIControlParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Parent.groovy",
   "BIControlChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Child.groovy",
@@ -112,9 +118,13 @@
   "CATTDirectorType": "App",
   "CATTDirectorParentVersion": "v2.0.0",
   "CATTDirectorChildVersion": "v2.0.0",
+  "CATTDirectorChildName": "NA",
   "CATTDirectorChild2Version": "NA",
+  "CATTDirectorChild2Name": "NA",
   "CATTDirectorChild3Version": "NA",
+  "CATTDirectorChild3Name": "NA",
   "CATTDirectorChild4Version": "NA",
+  "CATTDirectorChild4Name": "NA",
   "CATTDirectorDriverVersion": "NA",
   "CATTDirectorParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/CATT%20Director/CATTD-parent.groovy",
   "CATTDirectorChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/CATT%20Director/CATTD-child.groovy",
@@ -125,9 +135,13 @@
   "ChromecastHelperType": "App",
   "ChromecastHelperParentVersion": "v2.0.0",
   "ChromecastHelperChildVersion": "NA",
+  "ChromecastHelperChildName": "NA",
   "ChromecastHelperChild2Version": "NA",
+  "ChromecastHelperChild2Name": "NA",
   "ChromecastHelperChild3Version": "NA",
+  "ChromecastHelperChild3Name": "NA",
   "ChromecastHelperChild4Version": "NA",
+  "ChromecastHelperChild4Name": "NA",
   "ChromecastHelperDriverVersion": "NA",
   "ChromecastHelperParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Chromecast%20Helper/CH.groovy",
   "ChromecastHelperChildRawCode": "NA",
@@ -158,9 +172,13 @@
   "DeviceSequencerType": "App",
   "DeviceSequencerParentVersion": "v2.0.0",
   "DeviceSequencerChildVersion": "v2.0.0",
+  "DeviceSequencerChildName": "NA",
   "DeviceSequencerChild2Version": "NA",
+  "DeviceSequencerChild2Name": "NA",
   "DeviceSequencerChild3Version": "NA",
+  "DeviceSequencerChild3Name": "NA",
   "DeviceSequencerChild4Version": "NA",
+  "DeviceSequencerChild4Name": "NA",
   "DeviceSequencerDriverVersion": "NA",
   "DeviceSequencerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Sequencer/DS-parent.groovy",
   "DeviceSequencerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Sequencer/DS-child.groovy",
@@ -171,9 +189,13 @@
   "DeviceWatchdogType": "App",
   "DeviceWatchdogParentVersion": "v2.0.0",
   "DeviceWatchdogChildVersion": "v2.0.0",
+  "DeviceWatchdogChildName": "NA",
   "DeviceWatchdogChild2Version": "NA",
+  "DeviceWatchdogChild2Name": "NA",
   "DeviceWatchdogChild3Version": "NA",
+  "DeviceWatchdogChild3Name": "NA",
   "DeviceWatchdogChild4Version": "NA",
+  "DeviceWatchdogChild4Name": "NA",
   "DeviceWatchdogDriverVersion": "V1.0.4",
   "DeviceWatchdogParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-parent.groovy",
   "DeviceWatchdogChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-child.groovy",
@@ -184,9 +206,13 @@
   "FollowMeType": "App",
   "FollowMeParentVersion": "v2.0.0",
   "FollowMeChildVersion": "v2.0.2",
+  "FollowMeChildName": "NA",
   "FollowMeChild2Version": "NA",
+  "FollowMeChild2Name": "NA",
   "FollowMeChild3Version": "NA",
+  "FollowMeChild3Name": "NA",
   "FollowMeChild4Version": "NA",
+  "FollowMeChild4Name": "NA",
   "FollowMeDriverVersion": "NA",
   "FollowMeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-parent.groovy",
   "FollowMeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-child.groovy",
@@ -197,9 +223,13 @@
   "FullyKioskDirectorType": "App",
   "FullyKioskDirectorParentVersion": "v2.0.0",
   "FullyKioskDirectorChildVersion": "v2.0.0",
+  "FullyKioskDirectorChildName": "NA",
   "FullyKioskDirectorChild2Version": "NA",
+  "FullyKioskDirectorChild2Name": "NA",
   "FullyKioskDirectorChild3Version": "NA",
+  "FullyKioskDirectorChild3Name": "NA",
   "FullyKioskDirectorChild4Version": "NA",
+  "FullyKioskDirectorChild4Name": "NA",
   "FullyKioskDirectorDriverVersion": "NA",
   "FullyKioskDirectorParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Fully%20Kiosk%20Director/FKC-parent.groovy",
   "FullyKioskDirectorChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Fully%20Kiosk%20Director/FKC-child.groovy",
@@ -210,9 +240,13 @@
   "GentleWakeUpType": "App",
   "GentleWakeUpParentVersion": "v2.0.0",
   "GentleWakeUpChildVersion": "v2.0.0",
+  "GentleWakeUpChildName": "NA",
   "GentleWakeUpChild2Version": "NA",
+  "GentleWakeUpChild2Name": "NA",
   "GentleWakeUpChild3Version": "NA",
+  "GentleWakeUpChild3Name": "NA",
   "GentleWakeUpChild4Version": "NA",
+  "GentleWakeUpChild4Name": "NA",
   "GentleWakeUpDriverVersion": "v1.0.0",
   "GentleWakeUpParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Gentle%20Wake%20Up/GWU-parent.groovy",
   "GentleWakeUpChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Gentle%20Wake%20Up/GWU-child.groovy",
@@ -223,9 +257,13 @@
   "Life360TrackerType": "App",
   "Life360TrackerParentVersion": "v2.0.0",
   "Life360TrackerChildVersion": "v2.0.0",
+  "Life360TrackerChildName": "NA",
   "Life360TrackerChild2Version": "NA",
+  "Life360TrackerChild2Name": "NA",
   "Life360TrackerChild3Version": "NA",
+  "Life360TrackerChild3Name": "NA",
   "Life360TrackerChild4Version": "NA",
+  "Life360TrackerChild4Name": "NA",
   "Life360TrackerDriverVersion": "NA",
   "Life360TrackerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Life360%20Tracker/LT-parent.groovy",
   "Life360TrackerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Life360%20Tracker/LT-child.groovy",
@@ -236,9 +274,13 @@
   "Life360withStatesType": "App",
   "Life360withStatesParentVersion": "v2.0.0",
   "Life360withStatesChildVersion": "NA",
+  "Life360withStatesChildName": "NA",
   "Life360withStatesChild2Version": "NA",
+  "Life360withStatesChild2Name": "NA",
   "Life360withStatesChild3Version": "NA",
+  "Life360withStatesChild3Name": "NA",
   "Life360withStatesChild4Version": "NA",
+  "Life360withStatesChild4Name": "NA",
   "Life360withStatesDriverVersion": "v1.1.3",
   "Life360withStatesParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Life360/L-app.groovy",
   "Life360withStatesChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Life360/L-driver.groovy",
@@ -249,9 +291,13 @@
   "LightingEffectsType": "App",
   "LightingEffectsParentVersion": "v2.0.0",
   "LightingEffectsChildVersion": "v2.0.0",
+  "LightingEffectsChildName": "NA",
   "LightingEffectsChild2Version": "NA",
+  "LightingEffectsChild2Name": "NA",
   "LightingEffectsChild3Version": "NA",
+  "LightingEffectsChild3Name": "NA",
   "LightingEffectsChild4Version": "NA",
+  "LightingEffectsChild4Name": "NA",
   "LightingEffectsDriverVersion": "NA",
   "LightingEffectsParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Lighting%20Effects/LE%20Parent.groovy",
   "LightingEffectsChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Lighting%20Effects/LE%20Child.groovy",
@@ -262,9 +308,13 @@
   "MagicCubeType": "App",
   "MagicCubeParentVersion": "v2.0.0",
   "MagicCubeChildVersion": "v2.0.1",
+  "MagicCubeChildName": "NA",
   "MagicCubeChild2Version": "NA",
+  "MagicCubeChild2Name": "NA",
   "MagicCubeChild3Version": "NA",
+  "MagicCubeChild3Name": "NA",
   "MagicCubeChild4Version": "NA",
+  "MagicCubeChild4Name": "NA",
   "MagicCubeDriverVersion": "NA",
   "MagicCubeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Magic%20Cube/MC-parent.groovy",
   "MagicCubeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Magic%20Cube/MC-child.groovy",
@@ -275,9 +325,13 @@
   "MotionControlledSceneLightingType": "App",
   "MotionControlledSceneLightingParentVersion": "v2.0.0",
   "MotionControlledSceneLightingChildVersion": "v2.0.0",
+  "MotionControlledSceneLightingChildName": "NA",
   "MotionControlledSceneLightingChild2Version": "NA",
+  "MotionControlledSceneLightingChild2Name": "NA",
   "MotionControlledSceneLightingChild3Version": "NA",
+  "MotionControlledSceneLightingChild3Name": "NA",
   "MotionControlledSceneLightingChild4Version": "NA",
+  "MotionControlledSceneLightingChild4Name": "NA",
   "MotionControlledSceneLightingDriverVersion": "NA",
   "MotionControlledSceneLightingParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Motion%20Controlled%20Scene%20Lighting/MCSL-Parent.groovy",
   "MotionControlledSceneLightingChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Motion%20Controlled%20Scene%20Lighting/MCSL-Child.groovy",
@@ -288,9 +342,13 @@
   "NotifierPlusType": "App",
   "NotifierPlusParentVersion": "v2.0.0",
   "NotifierPlusChildVersion": "v2.0.0",
+  "NotifierPlusChildName": "NA",
   "NotifierPlusChild2Version": "NA",
+  "NotifierPlusChild2Name": "NA",
   "NotifierPlusChild3Version": "NA",
+  "NotifierPlusChild3Name": "NA",
   "NotifierPlusChild4Version": "NA",
+  "NotifierPlusChild4Name": "NA",
   "NotifierPlusDriverVersion": "NA",
   "NotifierPlusParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-parent.groovy",
   "NotifierPlusChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-child.groovy",
@@ -301,9 +359,13 @@
   "OneataTimeType": "App",
   "OneataTimeParentVersion": "v2.0.0",
   "OneataTimeChildVersion": "v2.0.0",
+  "OneataTimeChildName": "NA",
   "OneataTimeChild2Version": "NA",
+  "OneataTimeChild2Name": "NA",
   "OneataTimeChild3Version": "NA",
+  "OneataTimeChild3Name": "NA",
   "OneataTimeChild4Version": "NA",
+  "OneataTimeChild4Name": "NA",
   "OneataTimeDriverVersion": "NA",
   "OneataTimeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/One%20at%20a%20Time/OaaT-Parent.groovy",
   "OneataTimeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/One%20at%20a%20Time/OaaT-Child.groovy",
@@ -314,9 +376,13 @@
   "SendIP2IRType": "App",
   "SendIP2IRParentVersion": "v2.0.0",
   "SendIP2IRChildVersion": "v2.0.0",
+  "SendIP2IRChildName": "NA",
   "SendIP2IRChild2Version": "NA",
+  "SendIP2IRChild2Name": "NA",
   "SendIP2IRChild3Version": "NA",
+  "SendIP2IRChild3Name": "NA",
   "SendIP2IRChild4Version": "NA",
+  "SendIP2IRChild4Name": "NA",
   "SendIP2IRDriverVersion": "V1.0.3",
   "SendIP2IRParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Parent.groovy",
   "SendIP2IRChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Child.groovy",
@@ -327,9 +393,13 @@
   "SimpleDeviceTimerType": "App",
   "SimpleDeviceTimerParentVersion": "v2.0.0",
   "SimpleDeviceTimerChildVersion": "v2.0.0",
+  "SimpleDeviceTimerChildName": "NA",
   "SimpleDeviceTimerChild2Version": "NA",
+  "SimpleDeviceTimerChild2Name": "NA",
   "SimpleDeviceTimerChild3Version": "NA",
+  "SimpleDeviceTimerChild3Name": "NA",
   "SimpleDeviceTimerChild4Version": "NA",
+  "SimpleDeviceTimerChild4Name": "NA",
   "SimpleDeviceTimerDriverVersion": "NA",
   "SimpleDeviceTimerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Device%20Timer/SDT-parent.groovy",
   "SimpleDeviceTimerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Device%20Timer/SDT-child.groovy",
@@ -340,9 +410,13 @@
   "SimpleIrrigationType": "App",
   "SimpleIrrigationParentVersion": "v2.0.0",
   "SimpleIrrigationChildVersion": "v2.0.0",
+  "SimpleIrrigationChildName": "NA",
   "SimpleIrrigationChild2Version": "NA",
+  "SimpleIrrigationChild2Name": "NA",
   "SimpleIrrigationChild3Version": "NA",
+  "SimpleIrrigationChild3Name": "NA",
   "SimpleIrrigationChild4Version": "NA",
+  "SimpleIrrigationChild4Name": "NA",
   "SimpleIrrigationDriverVersion": "NA",
   "SimpleIrrigationParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-parent.groovy",
   "SimpleIrrigationChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-child.groovy",
@@ -353,9 +427,13 @@
   "SnapshotType": "App",
   "SnapshotParentVersion": "v2.0.0",
   "SnapshotChildVersion": "v2.0.0",
+  "SnapshotChildName": "NA",
   "SnapshotChild2Version": "NA",
+  "SnapshotChild2Name": "NA",
   "SnapshotChild3Version": "NA",
+  "SnapshotChild3Name": "NA",
   "SnapshotChild4Version": "NA",
+  "SnapshotChild4Name": "NA",
   "SnapshotDriverVersion": "v1.0.9",
   "SnapshotParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-parent.groovy",
   "SnapshotChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-Child.groovy",
@@ -366,9 +444,13 @@
   "WebPingerType": "App",
   "WebPingerParentVersion": "v2.0.0",
   "WebPingerChildVersion": "v2.0.0",
+  "WebPingerChildName": "NA",
   "WebPingerChild2Version": "NA",
+  "WebPingerChild2Name": "NA",
   "WebPingerChild3Version": "NA",
+  "WebPingerChild3Name": "NA",
   "WebPingerChild4Version": "NA",
+  "WebPingerChild4Name": "NA",
   "WebPingerDriverVersion": "NA",
   "WebPingerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Web%20Pinger/WP-parent.groovy",
   "WebPingerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Web%20Pinger/WP-child.groovy",
@@ -379,9 +461,13 @@
   "WelcomeHomeType": "App",
   "WelcomeHomeParentVersion": "v2.0.3",
   "WelcomeHomeChildVersion": "v2.1.1",
+  "WelcomeHomeChildName": "NA",
   "WelcomeHomeChild2Version": "NA",
+  "WelcomeHomeChild2Name": "NA",
   "WelcomeHomeChild3Version": "NA",
+  "WelcomeHomeChild3Name": "NA",
   "WelcomeHomeChild4Version": "NA",
+  "WelcomeHomeChild4Name": "NA",
   "WelcomeHomeDriverVersion": "v1.0.2",
   "WelcomeHomeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Parent.groovy",
   "WelcomeHomeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Child.groovy",
