--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -43,6 +43,9 @@
   "AbacusIntenseCountingDriverVersion": "V1.0.2",
   "AbacusIntenseCountingParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-parent.groovy",
   "AbacusIntenseCountingChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-child.groovy",
+  "AbacusIntenseCountingChild2RawCode": "NA",
+  "AbacusIntenseCountingChild3RawCode": "NA",
+  "AbacusIntenseCountingChild4RawCode": "NA",
   "AbacusIntenseCountingDriverRawCode": "https://github.com/bptworld/Hubitat/blob/master/Apps/Abacus%20-%20Intense%20Counting/AIC-driver.groovy",
   "AbacusIntenseCountingDiscussion": "https://community.hubitat.com/t/release-abacus-intense-counting/7883",
   "AbacusIntenseCountingUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
@@ -60,6 +63,9 @@
   "AbacusTimeTravelerDriverVersion": "NA",
   "AbacusTimeTravelerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-parent.groovy",
   "AbacusTimeTravelerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-child.groovy",
+  "AbacusTimeTravelerChild2RawCode": "NA",
+  "AbacusTimeTravelerChild3RawCode": "NA",
+  "AbacusTimeTravelerChild4RawCode": "NA",
   "AbacusTimeTravelerDriverRawCode": "NA",
   "AbacusTimeTravelerDiscussion": "https://community.hubitat.com/t/release-abacus-time-traveler/8091",
   "AbacusTimeTravelerUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
@@ -77,6 +83,9 @@
   "AppWatchdog2DriverVersion": "v2.0.0",
   "AppWatchdog2ParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-parent.groovy",
   "AppWatchdog2ChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-child.groovy",
+  "AppWatchdog2Child2RawCode": "NA",
+  "AppWatchdog2Child3RawCode": "NA",
+  "AppWatchdog2Child4RawCode": "NA",
   "AppWatchdog2DriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-driver.groovy",
   "AppWatchdog2Discussion": "https://community.hubitat.com/t/release-app-watchdog/9952",
   "AppWatchdog2UpdateNote": "V2.0.1 - 08/20/19 - Fixed some missing code in dName.",
@@ -94,6 +103,9 @@
   "AtHomeSimulatorDriverVersion": "NA",
   "AtHomeSimulatorParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/At%20Home%20Simulator/AHS-parent.groovy",
   "AtHomeSimulatorChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/At%20Home%20Simulator/AHS-child.groovy",
+  "AtHomeSimulatorChild2RawCode": "NA",
+  "AtHomeSimulatorChild3RawCode": "NA",
+  "AtHomeSimulatorChild4RawCode": "NA",
   "AtHomeSimulatorDriverRawCode": "NA",
   "AtHomeSimulatorDiscussion": "https://community.hubitat.com/t/beta-at-home-simulator/8697",
   "AtHomeSimulatorUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
@@ -111,6 +123,9 @@
   "BIControlDriverVersion": "NA",
   "BIControlParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Parent.groovy",
   "BIControlChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Child.groovy",
+  "BIControlChild2RawCode": "NA",
+  "BIControlChild3RawCode": "NA",
+  "BIControlChild4RawCode": "NA",
   "BIControlDriverRawCode": "NA",
   "BIControlDiscussion": "https://community.hubitat.com/t/release-bi-control-local-blue-iris-control/5454",
   "BIControlUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
@@ -128,6 +143,9 @@
   "CATTDirectorDriverVersion": "NA",
   "CATTDirectorParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/CATT%20Director/CATTD-parent.groovy",
   "CATTDirectorChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/CATT%20Director/CATTD-child.groovy",
+  "CATTDirectorChild2RawCode": "NA",
+  "CATTDirectorChild3RawCode": "NA",
+  "CATTDirectorChild4RawCode": "NA",
   "CATTDirectorDriverRawCode": "NA",
   "CATTDirectorDiscussion": "https://community.hubitat.com/t/release-catt-director-app-and-driver/20894",
   "CATTDirectorUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
@@ -145,6 +163,9 @@
   "ChromecastHelperDriverVersion": "NA",
   "ChromecastHelperParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Chromecast%20Helper/CH.groovy",
   "ChromecastHelperChildRawCode": "NA",
+  "ChromecastHelperChild2RawCode": "NA",
+  "ChromecastHelperChild3RawCode": "NA",
+  "ChromecastHelperChild4RawCode": "NA",
   "ChromecastHelperDriverRawCode": "NA",
   "ChromecastHelperDiscussion": "https://community.hubitat.com/t/release-chromecast-helper-simple-way-to-help-keep-your-google-nest-devices-alive/19237",
   "ChromecastHelperUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
@@ -182,6 +203,9 @@
   "DeviceSequencerDriverVersion": "NA",
   "DeviceSequencerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Sequencer/DS-parent.groovy",
   "DeviceSequencerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Sequencer/DS-child.groovy",
+  "DeviceSequencerChild2RawCode": "NA",
+  "DeviceSequencerChild3RawCode": "NA",
+  "DeviceSequencerChild4RawCode": "NA",
   "DeviceSequencerDriverRawCode": "NA",
   "DeviceSequencerDiscussion": "https://community.hubitat.com/t/release-device-sequencer/8596",
   "DeviceSequencerUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
@@ -199,6 +223,9 @@
   "DeviceWatchdogDriverVersion": "V1.0.4",
   "DeviceWatchdogParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-parent.groovy",
   "DeviceWatchdogChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-child.groovy",
+  "DeviceWatchdogChild2RawCode": "NA",
+  "DeviceWatchdogChild3RawCode": "NA",
+  "DeviceWatchdogChild4RawCode": "NA",
   "DeviceWatchdogDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-driver.groovy",
   "DeviceWatchdogDiscussion": "https://community.hubitat.com/t/release-device-watchdog/7692",
   "DeviceWatchdogUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
@@ -216,6 +243,9 @@
   "FollowMeDriverVersion": "NA",
   "FollowMeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-parent.groovy",
   "FollowMeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-child.groovy",
+  "FollowMeChild2RawCode": "NA",
+  "FollowMeChild3RawCode": "NA",
+  "FollowMeChild4RawCode": "NA",
   "FollowMeDriverRawCode": "NA",
   "FollowMeDiscussion": "https://community.hubitat.com/t/release-follow-me/12139",
   "FollowMeUpdateNote": "V2.0.2 - 08/18/19 - App Watchdog 2 compatible",
@@ -233,6 +263,9 @@
   "FullyKioskDirectorDriverVersion": "NA",
   "FullyKioskDirectorParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Fully%20Kiosk%20Director/FKC-parent.groovy",
   "FullyKioskDirectorChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Fully%20Kiosk%20Director/FKC-child.groovy",
+  "FullyKioskDirectorChild2RawCode": "NA",
+  "FullyKioskDirectorChild3RawCode": "NA",
+  "FullyKioskDirectorChild4RawCode": "NA",
   "FullyKioskDirectorDriverRawCode": "NA",
   "FullyKioskDirectorDiscussion": "https://community.hubitat.com/t/release-fully-kiosk-director/15310",
   "FullyKioskDirectorUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
@@ -250,6 +283,9 @@
   "GentleWakeUpDriverVersion": "v1.0.0",
   "GentleWakeUpParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Gentle%20Wake%20Up/GWU-parent.groovy",
   "GentleWakeUpChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Gentle%20Wake%20Up/GWU-child.groovy",
+  "GentleWakeUpChild2RawCode": "NA",
+  "GentleWakeUpChild3RawCode": "NA",
+  "GentleWakeUpChild4RawCode": "NA",
   "GentleWakeUpDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Gentle%20Wake%20Up/GWU-driver.groovy",
   "GentleWakeUpDiscussion": "https://community.hubitat.com/t/port-gentle-wake-up/19971",
   "GentleWakeUpUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
